@@ -13,6 +13,11 @@ o [NSE] Added a library for Microsoft SQL Server and 7 new scripts. The new
     users
   [Patrik]
 
+o [NSE] New script dns-fuzz launches a fuzzing attack against DNS
+  servers. Added a new category - fuzzer - for scripts like this.
+  [Michael Pattrick]
+
+
 o [NSE] Fixed bug in rpc.lua library that incorrectly required file handles
   to be 32 octects when calling the ReadDir function. The bug was reported by
   Djalal Harouni. [Patrik]
